# CampusTradingPlatform

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: Item.cpp  Item.h  Platform.cpp  Platform.h  README.md  SearchEngine.cpp  SearchEngine.h  User.cpp  User.h  main.cpp
tests/: TestPlatform.cpp
